feat: add avatar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <h1><b>Ivan Kasenka</b></h1> 
+        <h1><b>Ivan Kasenka</b></h1>
+        <img src="avatar.jpg" height=330 width=288 alt="Ivan Kasenka">
         <ul>
             <li>
                 E-mail: <i>kasenka.ivan@gmail.com</i>
